# fastapi-react-template

./: .gitignore  .pre-commit-config.yaml  README.md
api/: docker-compose.yml  main.py  pyproject.toml
api/crud/: album.py  album_artist.py  artist.py  artist_album.py  song.py
api/database/: album.py  artist.py  author.py  init.py  musician.py  song.py
api/exceptions/: artist.py  base.py
api/routers/: album.py  artist.py
api/schemas/: album.py  artist.py
api/services/: album.py  artists.py
app/: .cta.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
app/src/: styles.css
app/src/api/: getArtists.ts
app/src/app/: globals.css  page.tsx
app/src/components/: CardArtist.tsx
app/src/components/ui/: button.tsx
app/src/routes/: __root.tsx  index.tsx  users.tsx
